tests/ui/extern-flag/multiple-opts.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `somedep`
  --> $DIR/multiple-opts.rs:19:5
   |
LL |     somedep::somefun();
   |     ^^^^^^^ use of unresolved module or unlinked crate `somedep`
   |
   = help: if you wanted to use a crate named `somedep`, use `cargo add somedep` to add it to your `Cargo.toml`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
